--- a/style/main.css
+++ b/style/main.css
@@ -4,7 +4,8 @@ html {
 h1 {
   color: rgb(255, 255, 255);
   background-image: url(https://thumbs.gfycat.com/EntirePeriodicBear-size_restricted.gif);
-  padding: 20px 40px 30px 400px;
+  padding: 20px 30px 20px;
+  text-align: center;
   font-family: "Uchen", serif;
 }
 h2 {
