--- a/style/charlemos.css
+++ b/style/charlemos.css
@@ -7,12 +7,13 @@
 .cuerpo {
   margin: 0;
   padding: 0;
-  background-color: black;
+  background: linear-gradient(rgb(51, 5, 5), rgb(0, 0, 0));
   font-size: 1.6rem;
 }
 p {
   color: rgb(5, 148, 12);
 }
 form {
-  background-color: rgb(126, 31, 31);
+  background-color: rgba(0, 0, 0, 0.137);
+  color: whitesmoke;
 }
