--- a/style/Cantinero.css
+++ b/style/Cantinero.css
@@ -11,7 +11,6 @@ h1 {
   text-align: center;
   font-family: "Uchen", serif;
   overflow: hidden;
-  width: 1300px;
   font-style: italic;
   font-size: 4rem;
 }
@@ -54,8 +53,8 @@ body {
 .grid {
   display: flex;
   background: url(/TDS/images/Cantinero.png) center;
-  width: 1300px;
-  height: 940px;
+  width: 100%;
+  height: 1000px;
   justify-content: space-around;
   align-items: center;
   gap: 10px;
@@ -66,6 +65,7 @@ body {
 .trago {
   justify-self: center;
   align-self: flex-end;
+  align-items: flex-end;
 }
 .trago__img {
   filter: none;
