--- a/style/Integrantes.css
+++ b/style/Integrantes.css
@@ -24,7 +24,7 @@ p {
 .grid {
   display: grid;
   background: url(/TDS/images/Cantinero.png) center;
-  width: 1100px;
+  width: 100%;
   height: 1000px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   border: 15px solid rgba(0, 0, 0, 0.418);
