--- a/style/Cantinero.css
+++ b/style/Cantinero.css
@@ -54,10 +54,10 @@ body {
   display: flex;
   background: url(/TDS/images/Cantinero.png) center;
   width: 100%;
-  height: 1000px;
-  justify-content: space-around;
-  align-items: center;
-  gap: 10px;
+  height: 950px;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 5px;
   border: 15px solid rgba(0, 0, 0, 0.418);
   cursor: grabbing;
 }
