--- a/style/main.css
+++ b/style/main.css
@@ -100,3 +100,8 @@ td {
   color: whitesmoke;
   background: linear-gradient(rgb(51, 5, 5), rgb(0, 0, 0));
 }
+.links {
+  color: yellow;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
