--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,3 +1,13 @@
 h1 {
-  color: blue;
+  color: rgb(255, 255, 255);
+  background-image: url(https://thumbs.gfycat.com/EntirePeriodicBear-size_restricted.gif);
+  text-align: center;
+  font-family: "Tourney", cursive;
+  font-size: 5rem;
+  background-size: contain;
+  background-repeat: round;
+  background-attachment: local;
+  padding: 20px 40px 30px;
+  overflow: hidden;
+  font-style: italic;
 }
