--- a/style/styles.css
+++ b/style/styles.css
@@ -1,4 +1,14 @@
 h1 {
-  color: blue;
+  color: white;
+  background-image: url(https://thumbs.gfycat.com/EntirePeriodicBear-size_restricted.gif);
+  text-align: center;
+  font-family: "Tourney", cursive;
+  font-size: 5rem;
+  background-size: contain;
+  background-repeat: round;
+  background-attachment: local;
+  padding: 20px 40px 30px;
+  overflow: hidden;
+  font-style: italic;
 }
 /*# sourceMappingURL=styles.css.map */
