--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,3 +1,7 @@
+$color-primario: rgb(238, 230, 230);
+$color-secundario: rgb(51, 5, 5);
+$negro: 333;
+
 html {
   font-size: 62.5%;
   margin: 0;
@@ -5,7 +9,7 @@ html {
 }
 //body
 body {
-  background: linear-gradient(rgb(51, 5, 5), rgb(0, 0, 0));
+  background: linear-gradient($color-secundario, $color-primario);
   font-size: 1.6rem;
 }
 //Parrafo
