--- a/style/styles.css
+++ b/style/styles.css
@@ -5,14 +5,8 @@ html {
 }
 
 body {
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#330505),
-    to(black)
-  );
-  background: linear-gradient(#330505, black);
+  background: -webkit-gradient(linear, left top, left bottom, from(#330505), to(#130000));
+  background: linear-gradient(#330505, #130000);
   font-size: 1.6rem;
 }
 
@@ -23,7 +17,7 @@ p {
 }
 
 .p__Violeta {
-  color: #630663;
+  color: #570379;
   font-size: 3.2rem;
 }
 
@@ -34,7 +28,7 @@ p {
 }
 
 .header__h1 {
-  color: white;
+  color: #eee6e6;
   background-image: url(https://thumbs.gfycat.com/EntirePeriodicBear-size_restricted.gif);
   text-align: center;
   font-family: "Tourney", cursive;
@@ -48,7 +42,7 @@ p {
 }
 
 .container__h2 {
-  color: white;
+  color: #eee6e6;
   font-family: "Uchen", serif;
   font-style: italic;
   font-size: 3rem;
@@ -61,7 +55,7 @@ p {
 }
 
 td {
-  color: #630663;
+  color: #570379;
   font-size: 2rem;
 }
 
@@ -73,12 +67,12 @@ td {
   width: 95%;
   height: 964px;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
   border: 15px solid rgba(0, 0, 0, 0.418);
   justify-items: center;
   -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
@@ -86,15 +80,15 @@ td {
 /*Propiedades de los elementos*/
 .trago {
   -ms-flex-item-align: end;
-  align-self: flex-end;
+      align-self: flex-end;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .trago__img {
   -webkit-filter: none;
-  filter: none;
+          filter: none;
   -webkit-transition: -webkit-filter 1s, -webkit-transform 1s;
   transition: -webkit-filter 1s, -webkit-transform 1s;
   transition: filter 1s, transform 1s;
@@ -104,67 +98,61 @@ td {
 /*Movimientos*/
 .trago:hover .trago__img {
   -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+          transform: scale(1.2);
   -webkit-filter: saturate(5);
-  filter: saturate(5);
+          filter: saturate(5);
 }
 
 /*Cartas*/
 .Carta-derecho {
   margin: 0;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
   -ms-flex-item-align: end;
-  align-self: flex-end;
+      align-self: flex-end;
   -webkit-filter: grayscale(1);
-  filter: grayscale(1);
+          filter: grayscale(1);
 }
 
 .Carta-derecho:hover {
   -webkit-transform: skew(10deg, 10deg);
-  transform: skew(10deg, 10deg);
+          transform: skew(10deg, 10deg);
   padding: 20px;
   -webkit-filter: none;
-  filter: none;
+          filter: none;
 }
 
 .Carta-izquierdo {
   margin: 0;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
   -ms-flex-item-align: end;
-  align-self: flex-end;
+      align-self: flex-end;
   -webkit-filter: grayscale(1);
-  filter: grayscale(1);
+          filter: grayscale(1);
 }
 
 .Carta-izquierdo:hover {
   -webkit-transform: skew(-10deg, -10deg);
-  transform: skew(-10deg, -10deg);
+          transform: skew(-10deg, -10deg);
   padding: 20px;
   -webkit-filter: none;
-  filter: none;
+          filter: none;
 }
 
 form {
   background-color: rgba(0, 0, 0, 0.137);
-  color: whitesmoke;
+  color: #eee6e6;
 }
 
 .modal-body {
-  color: whitesmoke;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#330505),
-    to(black)
-  );
-  background: linear-gradient(#330505, black);
+  color: #eee6e6;
+  background: -webkit-gradient(linear, left top, left bottom, from(#330505), to(#130000));
+  background: linear-gradient(#330505, #130000);
 }
 
 #menu {
-  background-color: black;
+  background-color: #130000;
 }
 
 #menu ul {
@@ -178,26 +166,20 @@ form {
 }
 
 #menu ul li a {
-  color: whitesmoke;
+  color: #eee6e6;
   padding: 20px 80px;
   display: block;
   text-decoration: none;
 }
 
 #menu ul li a:hover {
-  background: #750707;
+  background: #330505;
 }
 
 .modal-body {
   color: whitesmoke;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#330505),
-    to(black)
-  );
-  background: linear-gradient(#330505, black);
+  background: -webkit-gradient(linear, left top, left bottom, from(#330505), to(#130000));
+  background: linear-gradient(#330505, #130000);
 }
 
 .links {
