--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,155 +1,6 @@
-$color-primario: rgb(238, 230, 230);
-$color-secundario: rgb(51, 5, 5);
-$negro: rgb(0, 0, 0);
-$violeta: rgb(87, 3, 121);
-
-html {
-  font-size: 62.5%;
-  margin: 0;
-  padding: 0;
-}
-//body
-body {
-  background: linear-gradient($color-secundario, $negro);
-  font-size: 1.6rem;
-}
-//Parrafo
-p {
-  font-size: 2rem;
-  color: $color-primario;
-  font-weight: bolder;
-}
-.p__Violeta {
-  color: $violeta;
-  font-size: 3.2rem;
-}
-
-//Header
-.header {
-  display: flex;
-  &__h1 {
-    color: $color-primario;
-    background-image: url(https://thumbs.gfycat.com/EntirePeriodicBear-size_restricted.gif);
-    text-align: center;
-    font-family: "Tourney", cursive;
-    font-size: 4rem;
-    background-size: contain;
-    background-repeat: round;
-    background-attachment: local;
-    padding: 20px 40px 30px;
-    overflow: hidden;
-    font-style: italic;
-  }
-}
-
-//Container
-.container {
-  &__h2 {
-    color: $color-primario;
-    font-family: "Uchen", serif;
-    font-style: italic;
-    font-size: 3rem;
-    text-align: center;
-    border: dashed rgb(208, 223, 11);
-  }
-  &__h3 {
-    color: $color-secundario;
-  }
-}
-//TD
-td {
-  color: $violeta;
-  font-size: 2rem;
-}
-/*Propiedades del grid*/
-.grid {
-  display: grid;
-  background: url(/TDS/images/Cantinero.png) center;
-  width: 95%;
-  height: 964px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  border: 15px solid rgba(0, 0, 0, 0.418);
-  justify-items: center;
-  align-items: flex-end;
-  cursor: grabbing;
-}
-/*Propiedades de los elementos*/
-.trago {
-  align-self: flex-end;
-  align-items: center;
-  &__img {
-    filter: none;
-    transition: filter 1s, transform 1s;
-  }
-}
-/*Movimientos*/
-.trago:hover .trago__img {
-  transform: scale(1.2);
-  filter: saturate(5);
-}
-/*Cartas*/
-
-.Carta-derecho {
-  margin: 0;
-  justify-self: center;
-  align-self: flex-end;
-  filter: grayscale(1);
-}
-.Carta-derecho:hover {
-  transform: skew(10deg, 10deg);
-  padding: 20px;
-  filter: none;
-}
-.Carta-izquierdo {
-  margin: 0;
-  justify-self: center;
-  align-self: flex-end;
-  filter: grayscale(1);
-}
-.Carta-izquierdo:hover {
-  transform: skew(-10deg, -10deg);
-  padding: 20px;
-  filter: none;
-}
-
-//FORM
-form {
-  background-color: rgba(0, 0, 0, 0.137);
-  color: $color-primario;
-}
-.modal-body {
-  color: $color-primario;
-  background: linear-gradient($color-secundario, $negro);
-}
-
-//menu de navegacion
-#menu {
-  background-color: $negro;
-}
-#menu ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-#menu ul li {
-  display: inline-block;
-}
-#menu ul li a {
-  color: $color-primario;
-  padding: 20px 80px;
-  display: block;
-  text-decoration: none;
-}
-#menu ul li a:hover {
-  background: $color-secundario;
-}
-.modal-body {
-  color: whitesmoke;
-  background: linear-gradient($color-secundario, $negro);
-}
-
-.links {
-  color: yellow;
-  text-decoration: none;
-  font-size: 1.2rem;
-}
+@import "variables";
+@import "header";
+@import "bodyContainer";
+@import "grids";
+@import "nav";
+@import "form";
