--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,4 @@
-p,
-.p__Violeta {
+p, .p__Violeta {
   font-size: 2rem;
   color: #eee6e6;
   font-weight: bolder;
@@ -7,7 +6,11 @@ p,
 
 .p__Violeta {
   color: #570379;
-  font-size: 4rem;
+  font-size: 4px;
+}
+
+.p__Azul {
+  font-size: 4px;
 }
 
 .header {
@@ -31,13 +34,7 @@ p,
 }
 
 body {
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#330505),
-    to(black)
-  );
+  background: -webkit-gradient(linear, left top, left bottom, from(#330505), to(black));
   background: linear-gradient(#330505, black);
   font-size: 1.6rem;
 }
@@ -48,8 +45,7 @@ html {
   padding: 0;
 }
 
-.container__h2,
-.container__h3 {
+.container__h2, .container__h3 {
   color: #eee6e6;
   font-family: "Uchen", serif;
   font-style: italic;
@@ -67,16 +63,16 @@ html {
 .grid {
   display: -ms-grid;
   display: grid;
-  background: url(/TDS/images/Cantinero.png) center;
+  background: url(/./TDS/images/Cantinero.png);
   width: 95%;
   height: 964px;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
   border: 15px solid rgba(0, 0, 0, 0.418);
   justify-items: center;
   -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
@@ -84,15 +80,15 @@ html {
 /*Propiedades de los elementos*/
 .trago {
   -ms-flex-item-align: end;
-  align-self: flex-end;
+      align-self: flex-end;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .trago__img {
   -webkit-filter: none;
-  filter: none;
+          filter: none;
   -webkit-transition: -webkit-filter 1s, -webkit-transform 1s;
   transition: -webkit-filter 1s, -webkit-transform 1s;
   transition: filter 1s, transform 1s;
@@ -102,46 +98,46 @@ html {
 /*Movimientos*/
 .trago:hover .trago__img {
   -webkit-transform: scale(1.2);
-  transform: scale(1.2);
+          transform: scale(1.2);
   -webkit-filter: saturate(5);
-  filter: saturate(5);
+          filter: saturate(5);
 }
 
 /*Cartas*/
 .Carta-derecho {
   margin: 0;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
   -ms-flex-item-align: end;
-  align-self: flex-end;
+      align-self: flex-end;
   -webkit-filter: grayscale(1);
-  filter: grayscale(1);
+          filter: grayscale(1);
 }
 
 .Carta-derecho:hover {
   -webkit-transform: skew(10deg, 10deg);
-  transform: skew(10deg, 10deg);
+          transform: skew(10deg, 10deg);
   padding: 20px;
   -webkit-filter: none;
-  filter: none;
+          filter: none;
 }
 
 .Carta-izquierdo {
   margin: 0;
   -ms-grid-column-align: center;
-  justify-self: center;
+      justify-self: center;
   -ms-flex-item-align: end;
-  align-self: flex-end;
+      align-self: flex-end;
   -webkit-filter: grayscale(1);
-  filter: grayscale(1);
+          filter: grayscale(1);
 }
 
 .Carta-izquierdo:hover {
   -webkit-transform: skew(-10deg, -10deg);
-  transform: skew(-10deg, -10deg);
+          transform: skew(-10deg, -10deg);
   padding: 20px;
   -webkit-filter: none;
-  filter: none;
+          filter: none;
 }
 
 td {
@@ -176,13 +172,7 @@ td {
 
 .modal-body {
   color: whitesmoke;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#330505),
-    to(black)
-  );
+  background: -webkit-gradient(linear, left top, left bottom, from(#330505), to(black));
   background: linear-gradient(#330505, black);
 }
 
@@ -192,8 +182,7 @@ td {
   font-size: 1.2rem;
 }
 
-form,
-.modal-body {
+form, .modal-body {
   background-color: rgba(0, 0, 0, 0.137);
   color: #eee6e6;
 }
