--- a/style/styles.css
+++ b/style/styles.css
@@ -6,11 +6,11 @@ p, .p__Violeta {
 
 .p__Violeta {
   color: #570379;
-  font-size: 4px;
+  font-size: 4rem;
 }
 
 .p__Azul {
-  font-size: 4px;
+  font-size: 4rem;
 }
 
 .header {
