--- a/style/_form.scss
+++ b/style/_form.scss
@@ -9,5 +9,6 @@ form {
   font-style: italic;
 }
 input {
-  color: rgb(252, 247, 0);
+  color: rgb(0, 0, 0);
+  background-color: rgb(252, 247, 0);
 }
