--- a/style/styles.css
+++ b/style/styles.css
@@ -194,7 +194,7 @@ form, .modal-body {
 
 input {
   color: black;
-  background-color: #fcf700;
+  background-color: #ffe600;
 }
 
 .container-carousel {
