--- a/style/_carrucel.scss
+++ b/style/_carrucel.scss
@@ -1,6 +1,6 @@
 .container-carousel {
-  align-items: center;
-  align-content: center;
-  justify-items: center;
-  justify-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  text-align: center;
 }
