--- a/style/_bodyContainer.scss
+++ b/style/_bodyContainer.scss
@@ -16,9 +16,10 @@ html {
     color: $color-primario;
     font-family: "Uchen", serif;
     font-style: italic;
-    font-size: 3rem;
+    font-size: 2.1rem;
+    background-color: rgba(0, 0, 0, 0.514);
     text-align: center;
-    border: dashed rgb(208, 223, 11);
+    border: ridge rgb(208, 223, 11);
   }
   &__h3 {
     @extend .container__h2;
